Fixed Body BackgroundColor on Mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@ body {
             transparent,
             rgb(var(--background-end-rgb))
     ) rgb(var(--background-start-rgb));
+    height: 100vh;
 }
 
 @layer utilities {
